Adjust background and fix gapping around device locked

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -30,3 +30,8 @@
 ion-content.mes-main-content {
   background-color: map-get($colors, appBackground);
 }
+
+// Remove shadow after header elements
+ion-header.header-md:after {
+  background-image: none !important;
+}
